docs: translate to korean

--- a/src/exercise/01.md
+++ b/src/exercise/01.md
@@ -1,13 +1,12 @@
-# Basic JavaScript-rendered Hello World
+# 기본적인 자바스크립트 Hello World 렌더링
 
-## 📝 Your Notes
+## 📝 노트
 
-Elaborate on your learnings here in `src/exercise/01.md`
+`src/exercise/01.md`의 학습 내용을 자세히 설명합니다.
 
-## Background
+## 배경
 
-It doesn't take long to learn how to make "Hello World" appear on the page with
-HTML:
+HTML로 페이지에 "Hello World"가 보이도록 만드는 걸 배우는데는 오랜 시간이 걸리지 않습니다.
 
 ```html
 <html>
@@ -17,10 +16,7 @@ HTML:
 </html>
 ```
 
-The browser takes this HTML code and generates
-[the DOM (the Document Object Model)](https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model/Introduction)
-out of it. The browser then exposes the DOM to JavaScript so you can interact
-with it to add a layer of interactivity to your web-page.
+브라우저는 HTML 코드를 가지고 [DOM(Document Object Model)](https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model/Introduction)을 생성합니다. 그리고 DOM을 자바스크립트에서 접근 가능하게 하여 웹 페이지에서 인터랙션이 가능하게 만든다.
 
 ```html
 <html>
@@ -33,39 +29,28 @@ with it to add a layer of interactivity to your web-page.
 </html>
 ```
 
-Years ago, people were generating HTML on the server and then adding JavaScript
-on top of that generated HTML for interactivity. However, as requirements for
-that interactivity became more challenging, this approach produced applications
-that were difficult to maintain and had performance issues.
+예전에는, 사람들이 서버에서 HTML을 생성한 뒤 이 HTML의 인터랙션을 위해 자바스크립트를 상단에 추가했습니다. 하지만, 인터랙션의 요구 사항들이 점점 더 복잡해짐에 따라, 이 접근 방식은 유지 관리가 어렵고 성능에 문제가 있는 애플리케이션을 낳을 뿐이었습니다.
 
-So modern JavaScript frameworks were created to address some of the challenges
-by programmatically creating the DOM rather than defining it in hand-written
-HTML.
+그래서 직접 작성한 HTML로 DOM을 처리하는 대신 프로그래머블한 방식으로 DOM을 생성하여 이 문제를 해결하고자 모던 자바스크립트 프레임워크가 탄생했습니다.
 
-## Exercise
 
-Production deploys:
+## 연습
 
-- [Exercise](http://react-fundamentals.netlify.app/isolated/exercise/01.html)
-- [Final](http://react-fundamentals.netlify.app/isolated/final/01.html)
+프로덕션 배포:
 
-It's important to have a basic understanding of how to generate and interact
-with DOM nodes using JavaScript because it will help you understand how React
-works under the hood a little better. So in this exercise we're actually not
-going to use React at all. Instead we're going to use JavaScript to create a
-`div` DOM node with the text "Hello World" and insert that DOM node into the
-document.
+- [연습](http://react-fundamentals.netlify.app/isolated/exercise/01.html)
+- [결과](http://react-fundamentals.netlify.app/isolated/final/01.html)
 
-## Extra Credit
+자바스크립트를 사용하여 DOM 노드를 생성하고 인터랙트하는 방법의 기본 이해를 갖는 것은 중요합니다. React가 그 내부에서 어떻게 동작하는지 이해하는 데 도움을 주기 때문입니다. 따라서 이번 연습에서 실제로 React를 전혀 사용하지 않을 겁니다. 대신 자바스크립트를 사용하여 "Hello World"란 텍스트가 있는 `div` DOM 노드를 만들고 해당 DOM 노드를 문서에 삽입합니다.
 
-### 1. 💯 generate the root node
+## 추가 문제
 
-[Production deploy](http://react-fundamentals.netlify.app/isolated/final/01.extra-1.html)
+### 1. 💯 루트 노드 생성하기
 
-Rather than having the `root` node in the HTML, see if you can create that one
-using JavaScript as well.
+[프로덕션 배포](http://react-fundamentals.netlify.app/isolated/final/01.extra-1.html)
 
-## 🦉 Feedback
+HTML 내 `root` 노드를 갖는 대신, 이것 또한 자바스크립트로 만들 수 있는지 확인해봅시다.
 
-Fill out
-[the feedback form](https://ws.kcd.im/?ws=React%20Fundamentals%20%E2%9A%9B&e=01%3A%20Basic%20JavaScript-rendered%20Hello%20World&em=).
+## 🦉 피드백
+
+[피드백 양식](https://ws.kcd.im/?ws=React%20Fundamentals%20%E2%9A%9B&e=01%3A%20Basic%20JavaScript-rendered%20Hello%20World&em=)을 채워주세요.
