--- a/src/exercise/02.md
+++ b/src/exercise/02.md
@@ -1,58 +1,42 @@
-# Intro to raw React APIs
+# 기본 React API 시작하기
 
-## 📝 Your Notes
+## 📝 노트
 
-Elaborate on your learnings here in `src/exercise/02.md`
+`src/exercise/02.md`의 학습 내용을 자세히 설명합니다.
 
-## Background
+## 배경
 
-React is the most widely used frontend framework in the world and it's using the
-same APIs that you're using when it creates DOM nodes.
+React는 현재 세계에서 가장 널리 쓰이는 프런트엔드 프레임워크이며 여러분들이 DOM 노드를 생성할 때 사용하던 것과 똑같은 API를 사용합니다.
 
-> In fact,
-> [here's where that happens in the React source code](https://github.com/facebook/react/blob/48907797294340b6d5d8fecfbcf97edf0691888d/packages/react-dom/src/client/ReactDOMComponent.js#L416)
-> at the time of this writing.
+> 사실, 이 글을 쓸 당시 [React 소스 코드 내에서 이 일이 일어나는 곳이 여기였다.](https://github.com/facebook/react/blob/48907797294340b6d5d8fecfbcf97edf0691888d/packages/react-dom/src/client/ReactDOMComponent.js#L416) 
 
-React abstracts away the imperative browser API from you to give you a much more
-declarative API to work with.
+React는 명령형인 브라우저 API를 추상화하여 여러분들이 작업할 땐 훨씬 선언적인 API를 제공합니다.
 
-> Learn more about the difference between those two concepts here:
-> [Imperative vs Declarative Programming](https://tylermcginnis.com/imperative-vs-declarative-programming/)
+> 두 개의 컨셉에 대해 더 자세히 알고 싶으면 이 글을 보세요: [명령형 vs 선언형 프로그래밍](https://tylermcginnis.com/imperative-vs-declarative-programming/)
 
-One important thing to know about React is that it supports multiple platforms
-(for example, native and web). Each of these platforms has its own code
-necessary for interacting with that platform, and then there's shared code
-between the platforms.
+ReactR에 대해 알아야 할 한 가지 중요한 점은 여러 플랫폼(ex. 네이티브와 앱)을 지원한다는 것입니다. 이런 각 플랫폼들은 해당 플랫폼과 상호 작용하는데 필요한 자체 고유의 코드가 있으며, 플랫폼 간에 공유되는 코드도 있습니다.
 
-With that in mind, you need two JavaScript files to write React applications for
-the web:
+이걸 염두에 두고, 여러분들은 웹을 위한 React 애플리케이션을 작성하기 위해 두 개의 자바스크립트 파일이 필요합니다.
 
-- React: responsible for creating React elements (kinda like
-  `document.createElement()`)
-- ReactDOM: responsible for rendering React elements to the DOM (kinda like
-  `rootElement.append()`)
+- React: (`document.createElement()` 처럼) React 요소를 생성하는 책임을 갖는다. 
+- ReactDOM: (`rootElement.append()` 처럼) React 요소를 DOM에 렌더링 하는 책임을 갖는다. 
 
-## Exercise
+## 연습
 
-Production deploys:
+프로덕션 배포:
 
-- [Exercise](http://react-fundamentals.netlify.app/isolated/exercise/02.html)
-- [Final](http://react-fundamentals.netlify.app/isolated/final/02.html)
+- [연습](http://react-fundamentals.netlify.app/isolated/exercise/02.html)
+- [결과](http://react-fundamentals.netlify.app/isolated/final/02.html)
 
-Let's convert this to use React! But don't worry, we won't be doing any JSX just
-yet... You're going to use raw React APIs here.
+React를 사용하여 변환해보죠. 걱정 마세요. 아직 JSX를 사용하진 않을거에요. 먼저 원시형 React API를 사용해볼 겁니다.
 
-In modern applications you'll get React and React DOM files from a "package
-registry" like [npm](https://npmjs.com) ([react](https://npm.im/react) and
-[react-dom](https://npm.im/react-dom)). But for these first exercises, we'll use
-the script files which are available on [unpkg.com](https://unpkg.com) and
-regular script tags so you don't have to bother installing them. So in the
-exercise you'll be required to add script tags for these files.
+최근 애플리케이션에선 [npm](https://npmjs.com)같은 패키지 저장소에서 React와 ReactDOM 파일([react](https://npm.im/react)와
+[react-dom](https://npm.im/react-dom))을 얻을 수 있을 것이다. 하지만 이건 첫 번째 연습이니 [unpkg.com](https://unpkg.com)의 파일을 사용해보고 일반적인 script 태그를 사용해보죠. 따라서 이 연습에서는 이러한 파일에 대한 script 태그를 추가해야 합니다.
 
-Once you include the script tags, you'll have two new global variables to use:
-`React` and `ReactDOM`.
 
-Here's a simple example of the API:
+script 태그를 한 번 삽입하면, `React`와 `ReactDOM`이라는 전역 변수를 갖게 될 겁니다.
+
+API를 사용하는 간단한 예제입니다.
 
 ```javascript
 const elementProps = {id: 'element-id', children: 'Hello world!'}
@@ -62,33 +46,28 @@ const root = ReactDOM.createRoot(rootElement)
 root.render(reactElement)
 ```
 
-> 🦉 NOTE: prior to React v18, the API was: `ReactDOM.render` and that's what
-> you'll see in the EpicReact.dev videos. This material has been updated, so
-> you'll want to use the new `ReactDOM.createRoot` API as demonstrated above.
+> 🦉 주목: React v18 이전에는, `ReactDOM.render`가 API였고, 이는 EpicReact.dev의 비디오에서 확인하실 수 있습니다. 이 자료는 업데이트 되었으므로 위의 코드대로 `ReactDOM.createRoot` API를 사용해야 합니다.
 
-> 🦉 NOTE: Because we're easing you into React by using the `index.html` and
-> UMDs with unpkg.com URLs, you're going to see an error in the console that
-> looks like this:
+> 🦉 주목: unpkg.com의 URL에서 `index.html`과 UMD를 사용하여 React로 쉽게 접근할 수 있으므로 콘솔에 다음과 같은 오류가 표시됩니다. 
 >
 > ```
 > index.js:1 Warning: You are importing createRoot from "react-dom" which is not
 > supported. You should instead import it from "react-dom/client".
 > ```
 >
-> The error is not really problematic for our purposes and will go away when we
-> move on from the `index.html` soon. For more info, reference:
-> https://github.com/facebook/react/issues/24372
+> 이 오류는 우리가 하고자 하는 것에는 문제가 되지 않으며 `index.html` 부분을 넘어가면 사라질 것입니다. 자세한 내용은 다음을 참조하세요.  
+> 참조: https://github.com/facebook/react/issues/24372
 
-Alright! Let's do this!
 
-## Extra Credit
+좋아요! 시작해보죠!
 
-### 1. 💯 nesting elements
+## 추가 문제
 
-[Production deploy](http://react-fundamentals.netlify.app/isolated/final/02.extra-1.html)
+### 1. 💯 중첩된 요소
 
-See if you can figure out how to write the JavaScript + React code to generate
-this DOM output:
+[프로덕션 배포](http://react-fundamentals.netlify.app/isolated/final/02.extra-1.html)
+
+이 DOM을 생성하기 위해 자바스크립트와 React를 작성하는 방법에 대해 알아봅시다.
 
 ```html
 <body>
@@ -101,7 +80,6 @@ this DOM output:
 </body>
 ```
 
-## 🦉 Feedback
+## 🦉 피드백
 
-Fill out
-[the feedback form](https://ws.kcd.im/?ws=React%20Fundamentals%20%E2%9A%9B&e=02%3A%20Intro%20to%20raw%20React%20APIs&em=).
+[피드백 양식](https://ws.kcd.im/?ws=React%20Fundamentals%20%E2%9A%9B&e=02%3A%20Intro%20to%20raw%20React%20APIs&em=)을 채워주세요.
